styleMain.css
* {
  font-family: 나눔바른고딕OTF, 나눔바른고딕, 나눔고딕, sans-serif;
}
html {
  font-size: 16px;
  line-height: 1.6;
}

body {
  width: 700px;
  margin: 0 auto;
}

h1 {
  font-size: 2em;
  color: #101010;
  border-bottom: 3px solid #e0e0e0;
  margin-top: 20px;
  margin-bottom: 10px;
}
h2 {
  font-size: 1.6em;
  color: #202020;
  border-bottom: 3px solid #e8e8e8;
  margin-top: 20px;
  margin-bottom: 10px;
}
h3 {
  font-size: 1.4em;
  color: #303030;
  margin-top: 20px;
  margin-bottom: 10px;
}
h4 {
  font-size: 1.2em;
  color: #404040;
  margin-top: 20px;
  margin-bottom: 10px;
}
h5 {
  font-size: 1.1em;
  color: #505050;
  margin-top: 20px;
  margin-bottom: 10px;
}
h6 {
  font-size: 1.0em;
  color: #606060;
  margin-top: 20px;
  margin-bottom: 10px;
}

hr {
  display: none;
}

a {
  text-decoration: none;
  color: #4080ff;
}
a::after {
  content: "→";
  background-color: #e0f0ff;
  border: 2px solid #c0e0ff;
  color: #80a0ff;
  margin-left: 0.1em;
  padding-left: 0.1em;
  padding-right: 0.1em;
}
a:hover, a:active, a:hover::after, a:active::after {
  background-color: #e0f0ff;
  border-bottom: 2px solid #c0e0ff;
}
code {
  font-family: D2Coding, monospace;
  border: 2px solid #e8e8e8;
  background-color: #f8f8f8;
  padding: 0.1em 0.2em;
}
pre code {
  border: none;
  background-color: none;
  padding: 0;
}
pre {
  font-family: D2Coding, monospace;
  border: 2px solid #e8e8e8;
  background-color: #f8f8f8;
  padding: 0.25em 1em;
}

table {
  border-collapse: collapse;
  margin: 0;
  width: 100%;
}
thead, tbody, tfoot {
  border-color: #e0e0e0;
  border-width: 2px;
  border-style: solid none;
}
tr:nth-child(odd) {
  background-color: #ffffff;
}
tr:nth-child(even) {
  background-color: #f8f8f8;
}
thead th, tfoot td {
  background-color: #f0f0f0;
}
th {
  padding: 0.1em 0.5em;
}
td {
  text-align: center;
  width: 2em;
  padding: 0.25em 0.5em;
  line-height: 1.3;
}
tr:hover {
  background-color: #f0f0f0;
}

blockquote {
  margin: 1.25em 1em 1em 1em;
  padding: 0.1px 1em 0.1px 2em;
  border: 2px solid #e0e0e0;
  border-left-width: 10px;
  background-color: #f4f4f4;
}

/************************************************/

.button {
  padding: 3px 15px;
}
.buttonStep {
  font-family: D2Coding, 나눔고딕코딩, Consolas, monospace;
  padding: 3px 7px;
}
.number {
  font-family: D2Coding, 나눔고딕코딩, Consolas, monospace;
  padding: 3px 3px;
  text-align: right;
  min-width: 3em;
}
.constTextInput {
  font-family: D2Coding, 나눔고딕코딩, Consolas, monospace;
  padding-left: 0.5em;
  border: none;
  background: none;
  color: #000000;
  width: 100px;
}

#h1BtnContainer {
  float: right;
}

#transBtnContainer {
  float: right;
  font-size: 1.5rem;
}
#pageSelectLabel {
  margin: 0;
  font-size: 1.5rem;
}
#pageSelectNum {
  margin: 0;
  width: 80px;
  font-size: 1.5rem;
  font-weight: bold;
}
#txtCutBtn, #txtClearBtn {
  margin: 0;
  padding: 0.5em 0.5em;
  vertical-align: top;
  width: 80px;
  font-size: 1rem;
  font-weight: bold;
}

#pvw, #pgm {
  float: left;
  text-align: center;
  margin: 0 10px 10px 0;
  padding: 0;
  overflow: hidden;
}
.pvwPgm {
  margin: 0;
  border: 1px solid #000000;
  color: #ffffff;
  overflow: hidden;
}
.pvwPgm tbody {
  border: none;
  overflow: hidden;
}
#pvwObj, #pgmObj {
  margin: 0;
  padding: 7.2px 12.8px;
  width: 256px;
  height: 144px;
  border: 1px solid #000000;
  background-color: #000000;
  transition: width 0.5s, font-size 0.5s;
  overflow: hidden;
  font-size: 14.4px;
  line-height: 1.4;
  word-break: keep-all;
}

#fileForm {
  padding: 1px;
  width: 250px;
  background-color: #ffffff;
}
#encodingTxt {
  padding: 3px;
  width: 5.5em;
  font-family: D2Coding, 나눔고딕코딩, Consolas, monospace;
}

#pageListContainer {
  clear: both;
  max-height: 400px;
  overflow-y: scroll;
}
.tdLeft {
  text-align: left;
  width: auto;
}
.pageNum {
  text-align: right;
}

